Fixed issue with logo coming down on small devices

--- a/JaydeepBrass/Content/css/responsive.css
+++ b/JaydeepBrass/Content/css/responsive.css
@@ -209,7 +209,7 @@
 	
 	/*header*/
   	.navbar-brand img {
-	    height: 45px;
+	    height: 180%;
 	    margin-top: -16px;
 	}
 
